<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text=""
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cells"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/bt_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:backgroundTint="#999"
        />

</LinearLayout>