<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="35dp"
    android:layout_width="35dp"
    android:layout_margin="1dp"
    android:layout_gravity="center_vertical|center_horizontal">

    <TextView
        android:id="@+id/tv_cell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:layout_gravity="center"
        />
    
    <ImageView
        android:id="@+id/iv_cell"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        />



</FrameLayout>