<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MenuFragment">
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_players"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sp_sizes"
        app:layout_constraintEnd_toEndOf="@id/gl_v_3"
        app:layout_constraintStart_toStartOf="@id/gl_v_2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_player"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/player"
        android:gravity="center"
        android:textColor="#AAA"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/gl_v_1"
        app:layout_constraintBottom_toBottomOf="@+id/sp_players"
        app:layout_constraintEnd_toStartOf="@+id/sp_players"
        app:layout_constraintTop_toTopOf="@+id/sp_players" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_sizes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_v_3"
        app:layout_constraintStart_toStartOf="@id/gl_v_2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textColor="#AAA"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/gl_v_1"
        app:layout_constraintBottom_toBottomOf="@+id/sp_sizes"
        app:layout_constraintEnd_toStartOf="@+id/sp_sizes"
        app:layout_constraintTop_toTopOf="@+id/sp_sizes" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_levels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/gl_v_3"
        app:layout_constraintStart_toStartOf="@id/gl_v_2"
        app:layout_constraintTop_toBottomOf="@id/sp_sizes" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textColor="#AAA"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/gl_v_1"
        app:layout_constraintBottom_toBottomOf="@+id/sp_levels"
        app:layout_constraintEnd_toStartOf="@+id/sp_levels"
        app:layout_constraintTop_toTopOf="@+id/sp_levels" />

    <Button
        android:id="@+id/bt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/game_start"
        android:textSize="22sp"
        android:backgroundTint="#888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_levels"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>