<resources>
    <string name="app_name">Minesweeper</string>
    <string name="select_level">選擇等級</string>
    <string name="gameOver">Game Over</string>
    <string name="congratulation">Congratulation!</string>
    <string name="restart">Restart</string>
    <string name="player">玩家</string>
    <string name="size">地圖</string>
    <string name="level">難度</string>
    <string name="game_start">遊戲開始</string>
</resources>