<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/menuFragment">

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.app.minesweeper.GameFragment"
        android:label="GameFragment"
        tools:layout="@layout/fragment_game">
        <argument
            android:name="player"
            app:argType="string" />
        <argument
            android:name="size"
            app:argType="string" />
        <argument
            android:name="level"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.app.minesweeper.MenuFragment"
        android:label="fragment_menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_menuFragment_to_gameFragment"
            app:destination="@id/gameFragment" >
        </action>
    </fragment>

</navigation>